# MemG-Vision

./: .gitignore  CMakeLists.txt  README.md  interceptor.cpp  main_demo.cpp  main_monitor.cpp  memguard.hpp  memguard_history.jsonl  ws_broadcaster.hpp  ws_server.hpp
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/history/: route.ts
frontend/src/app/history/: page.tsx
frontend/src/components/: EventLog.tsx  HeapCanvas.tsx  StatsPanel.tsx
frontend/src/hooks/: useMemGuard.ts
